<resources>
    <string name="app_name">予定管理アプリ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="一覧表示">First Fragment</string>
    <string name="カレンダー表示">Second Fragment</string>
    <string name="next2">Next</string>
    <string name="previous2">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_edit_text">予定編集</string>
    <string name="date_text">日付</string>
    <string name="time_text">時間</string>
    <string name="title_text">タイトル</string>
    <string name="detail_text">詳細</string>
    <string name="日付選択">日付選択</string>
    <string name="時間選択">時間選択</string>
    <string name="保存">保存</string>
    <string name="削除">削除</string>
    <string name="first">予定一覧</string>
    <string name="caleder">カレンダー表示</string>
    <string name="test">てすと</string>
    <string name="previous3">カレンダー表示</string>
    <string name="previous">一覧表示</string>
    <string name="next">カレンダー表示</string>
    <string name="str">表示</string>
    <string name="app_name2">お天気情報</string>
    <string name="tv_winfo_title">お天気詳細</string>
    <string name="date_text2">日付 0000/00/00</string>
    <string name="time_text2">時間 00:00</string>
    <string name="Option">設定</string>
    <string name="tenki">天気確認</string>
    <string name="spinnerad">祭り、入学式、成人式</string>
    <string name="title">タイトル</string>>
    <string name="description">pictures</string>
    <string name="endtime">（任意）時間00:00</string>
    <string name="date_text3">形式 0000/00/00</string>
    <string name="deletetitle">よく使う行事削除</string>
    <string name="addoption">よく使う行事追加</string>
    <string name="title1">　タイトル1</string>
    <string name="titletext">" タイトル1"</string>
    <string name="ti">" タイトル1"</string>
    <string name="keisiki">　形式 ○○○○/○○/○○</string>
    <string name="ke">" ○○○○/○○/○○"</string>
    <string name="ki">　○○○○/○○/○○</string>
    <string name="time2">　○○:○○</string>
    <string name="textchange">テキストカラー変更</string>
    <string name="deletelabel">行事削除</string>
    <string name="addlabel">行事追加</string>
    <string name="Baip">バイプレーションON/OFF</string>
    <string name="Bib">バイブレーションON/OFF</string>
    <string name="Saito">制作参考サイト等</string>
    <string name="今日の占い" />
    <string name="toi">問い合わせ</string>
    <string name="kakoyotei">過去の予定</string>
    <string name="hint">OOOO/OO/OO</string>
    <string name="hinttime">oo:oo</string>
    <string name="hint2">OO:OO</string>

</resources>