<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.FirstFragment"
        android:label="@string/first"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_to_scheduleEditFragment"
            app:destination="@id/scheduleEditFragment"
            app:exitAnim="@anim/fragment_close_enter" />
        <argument
            android:name="scheduleId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_FirstFragment_to_tenki"
            app:destination="@id/tenki" />
        <action
            android:id="@+id/action_FirstFragment_to_tamesi2"
            app:destination="@id/tenki" />
        <action
            android:id="@+id/action_FirstFragment_to_tenki2"
            app:destination="@id/tenki" />
        <action
            android:id="@+id/action_FirstFragment_to_tamesi"
            app:destination="@id/tenki" />
        <action
            android:id="@+id/action_FirstFragment_to_optionmenu"
            app:destination="@id/optionmenu" />
        <action
            android:id="@+id/action_FirstFragment_to_uranaiAc"
            app:destination="@id/uranaiAc" />
        <action
            android:id="@+id/action_FirstFragment_to_mainActivity2"
            app:destination="@id/mainActivity2" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.SecondFragment"
        android:label="@string/caleder"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_to_scheduleEditFragment"
            app:destination="@id/scheduleEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/scheduleEditFragment"
        android:name="com.example.myapplication.ScheduleEditFragment"
        android:label="@string/schedule_edit_text"
        tools:layout="@layout/fragment_schedule_edit" >
        <argument
            android:name="scheduleId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_scheduleEditFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_scheduleEditFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <activity
        android:id="@+id/tenki"
        android:name="com.example.myapplication.tenki"
        android:label="@string/tenki"
        tools:layout="@layout/activity_tenki" />


    <activity
        android:id="@+id/sampleActivity"
        android:name="com.example.myapplication.SampleActivity"
        android:label="activity_sample"
        tools:layout="@layout/activity_sample" />
    <fragment
        android:id="@+id/optionmenu"
        android:name="com.example.myapplication.optionmenu"
        android:label="設定">
        <action
            android:id="@+id/action_optionmenu_to_addoptio"
            app:destination="@id/addoption"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_deleteOption"
            app:destination="@id/deleteOption"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_sampleActivity"
            app:destination="@id/sampleActivity"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_textColorChange"
            app:destination="@id/textColorChange"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_scheduleEditFragment"
            app:destination="@id/scheduleEditFragment"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_baipretion"
            app:destination="@id/baipretion"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_saito"
            app:destination="@id/saito"
            app:enterAnim="@anim/nav_slide_enter_anim"
            app:exitAnim="@anim/nav_slide_exit_anim"
            app:popEnterAnim="@anim/nav_slide_pop_enter_anim"
            app:popExitAnim="@anim/nav_slide_pop_exit_anim" />
        <action
            android:id="@+id/action_optionmenu_to_kakoYotei"
            app:destination="@id/kakoYotei" />
    </fragment>
    <fragment
        android:id="@+id/addoption"
        android:name="com.example.myapplication.addoption"
        android:label="@string/addlabel"
        tools:layout="@layout/fragment_addoption" >
        <action
            android:id="@+id/action_addoption_to_deleteOption"
            app:destination="@id/deleteOption" />
    </fragment>
    <fragment
        android:id="@+id/deleteOption"
        android:name="com.example.myapplication.DeleteOption"
        android:label="@string/deletelabel"
        tools:layout="@layout/fragment_delete_option" >
        <action
            android:id="@+id/action_deleteOption_to_addoption"
            app:destination="@id/addoption" />
    </fragment>
    <fragment
        android:id="@+id/textColorChange"
        android:name="com.example.myapplication.TextColorChange"
        android:label="@string/textchange"
        tools:layout="@layout/fragment_text_color_change" />
    <fragment
        android:id="@+id/baipretion"
        android:name="com.example.myapplication.Baipretion"
        android:label="@string/Bib"
        tools:layout="@layout/fragment_baipretion" />
    <fragment
        android:id="@+id/saito"
        android:name="com.example.myapplication.Saito"
        android:label="@string/Saito"
        tools:layout="@layout/fragment_saito" />
    <fragment
        android:id="@+id/uranaiAc"
        android:name="com.example.myapplication.UranaiAc"
        android:label="UranaiAc" />
    <activity
        android:id="@+id/mainActivity2"
        android:name="com.example.myapplication.MainActivity2"
        android:label="@string/今日の占い" />
    <fragment
        android:id="@+id/toiawase"
        android:name="com.example.myapplication.Toiawase"
        android:label="@string/toi"
        tools:layout="@layout/fragment_toiawase" />
    <fragment
        android:id="@+id/kakoYotei"
        android:name="com.example.myapplication.KakoYotei"
        android:label="@string/kakoyotei"
        tools:layout="@layout/fragment_kako_yotei" />
    <fragment
        android:id="@+id/todaySchedule"
        android:name="com.example.myapplication.TodaySchedule"
        android:label="本日の予定"
        tools:layout="@layout/fragment_today_schedule" />
</navigation>