<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleEditFragment">


    <View
        android:id="@+id/view5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit" />

    <View
        android:id="@+id/view6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEdit" />

    <View
        android:id="@+id/view7"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/finishText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEdit" />

    <View
        android:id="@+id/view8"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEdit2" />

    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_style"
        android:ems="10"
        android:hint="タイトル１"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/dateEdit"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_style"
        android:ems="10"
        android:hint="@string/date_text2"
        android:inputType="date"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/timeEdit"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_style"
        android:ems="10"
        android:hint="@string/time_text2"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/timeEdit2"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_style"
        android:ems="10"
        android:hint="@string/time_text2"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishText" />

    <EditText
        android:id="@+id/detailEdit"
        android:layout_width="379dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/frame_style"
        android:ems="10"
        android:gravity="start|top"
        android:hint="詳細１"
        android:inputType="textMultiLine"
        android:maxLines="8"
        android:minLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_box_3"
        android:text="@string/保存"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailEdit"
        app:layout_constraintVertical_bias="0.142" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="108dp"
        android:layout_height="35dp"
        android:entries="@array/spi"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/titleEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/titleEdit"
        app:layout_constraintTop_toTopOf="@+id/titleEdit"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="日付"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="開始時間"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEdit" />

    <TextView
        android:id="@+id/finishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="終了時間"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEdit" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="タイトル"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="詳細"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEdit2" />

    <ImageButton
        android:id="@+id/datebutton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/calender1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/dateEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateEdit"
        app:layout_constraintTop_toTopOf="@+id/dateEdit"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/timeButton2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/time1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/timeEdit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/timeEdit2"
        app:layout_constraintTop_toTopOf="@+id/timeEdit2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/timeButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/time1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/timeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeEdit"
        app:layout_constraintTop_toTopOf="@+id/timeEdit"
        app:layout_constraintVertical_bias="0.0" /><![CDATA[



    android:text="Button"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="239dp" />


]]>
</androidx.constraintlayout.widget.ConstraintLayout>